# lighthouse

./: .gitignore  Deja-Info.plist  Deja.entitlements  INSTALL.md  Info.plist  Makefile  README.md  deja-backend.spec  deja.spec  install.sh  launch.sh  lighthouse.spec  project.yml  pyproject.toml  setup.sh  use-cases.md
.claude/plans/: modular-spinning-panda.md
.github/workflows/: release.yml
Deja.xcodeproj/: project.pbxproj
Resources/: AppIcon.icns
docs/: ARCHITECTURE.md  INSTALL-CORP-MAC.md  MOBILE.md  claude-code-chief-of-staff-routine.md  future-simplifications.md  integrate-claude-shadow-eval.md  integrate-model-eval-plan.md  integrate-mvp-flashlite-2026-04-11T0739.md  postmortem-graphiti-experiment.md  pre-launch-checklist.md  reflection-eval-2026-04-10.md  support-runbook.md  testing.md  vector-dedup-test-2026-04-11.md
docs-site/: README.md  mkdocs.yml  requirements.txt
docs-site/docs/: cos.md  day-in-the-life.md  glossary.md  goals-file.md  index.md  mcp.md  pipelines.md  principles.md  quickstart.md  signals.md  wiki.md
menubar/: Deja.swift  DejaRecorder.swift  Lighthouse.swift  LighthouseRecorder  LighthouseRecorder.swift  build.sh  bundle-python.sh
menubar/Tools/: deja-ocr.swift
menubar/icon/: Deja.icns
scripts/: canonicalize_wiki_frontmatter.py  test_imessage_decoder.swift
server/: Dockerfile  app.py  auth.py  db.py  proxy.py  render.yaml  requirements.txt  telemetry.py
site/: appcast.xml  index.html
site/about/: index.html
site/changelog/: index.html
site/download/: index.html
site/faq/: index.html
site/privacy/: index.html
src/deja/: __main__.py  activity_log.py  audit.py  auth.py  ax_context.py  briefing.py  chat_tools.py  chief_of_staff.py  config.py  contradictions.py  cos_proposals.py  dedup.py  event_themes.py  events_to_projects.py  feature_flags.py  goal_actions.py  goals.py  goals_reconcile.py  google_api.py  graphiti_ingest.py  graphiti_schema.py  graphiti_worker.py  health_check.py  identity.py  integrate_claude.py  integrate_claude_vision.py  integration_local.py  llm_client.py  local_models.py  mcp_install.py  mcp_server.py  meeting_coordinator.py  meeting_transcribe.py  mobile_poll.py  open_loops.py  people_enrichment.py  raw_image_sidecar.py  raw_ocr_sidecar.py  reflection.py  reflection_enrichment.py  (+15 more)
src/lighthouse/: __main__.py  activity_log.py  chat_tools.py  config.py  goal_actions.py  goals.py  health_check.py  identity.py  llm_client.py  mcp_install.py  mcp_server.py  meeting_coordinator.py  meeting_transcribe.py  people_enrichment.py  secrets.py  (+9 more)
tests/: conftest.py  test_activity_log.py  test_audit.py  test_briefing.py  test_chat_tools.py  test_contacts.py  test_events_to_projects.py  test_goals.py  test_goals_reconcile.py  test_google_api.py  test_google_contacts.py  test_health.py  test_health_check.py  test_identity.py  test_imports_smoke.py  test_llm_client_parse.py  test_observability.py  test_observation_time_utils.py  test_observer_dedup.py  test_observer_delta_live.py  test_observer_delta_params.py  test_people_enrichment.py  test_prefilter_format.py  test_prompt_contracts.py  test_reflect_schedule.py  test_retrieval_contract.py  test_signal_health.py  test_signal_health_api.py  test_signal_tiering.py  test_signals_format.py  test_stale_screenshot_filter.py  test_support_bundle.py  test_support_lookup.py  test_vision_fixtures.py  test_wiki.py  test_wiki_apply_updates.py  test_wiki_catalog.py  test_wiki_frontmatter_canonicalize.py  test_wiki_linkify.py
tools/: annotate_observations.py  annotate_web.py  annotate_wiki_writes.py  cleanup_frontmatter.py  deja_support_bundle.py  deja_support_lookup.py  email_thread_compare.py  integrate_mvp.py  integrate_shadow_compare.py  integrate_shadow_diff.py  integrate_v2_ship_test.py  integration_eval.py  narrative_replay.py  preprocess_compare.py  reflection_eval.py  shadow_blind_eval.py  sweep_people_contacts.py  test_messaging_unified.py  vision_eval.py
(+141 files in other folders)
