[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lighthouse"
version = "0.1.0"
description = "A personal agent that observes your world, matches signals to goals, and coordinates subagents"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0.0",
    "rumps>=0.4.0",
    "Pillow>=10.0",
    "imagehash>=4.3",
    "flask>=3.0",
    "pyobjc-framework-Cocoa>=10.0",
]

[project.scripts]
lighthouse = "lighthouse.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "vision: live-network regression tests that call Gemini vision (slow, costs tokens)",
    "real_wiki: opt out of the isolated_home fixture — run against the real wiki",
]
# Exclude vision tests from default runs — they hit the network and require
# real screenshots in tests/fixtures/screenshots/. Run with:
#   pytest -m vision
addopts = "-m 'not vision'"
